--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,37 +1,70 @@
-// Custom styles.
-code {
-    color: #ff7600;
-    background: #fbf7f8;
-    margin: 2px;
-}
-// ´ó´úÂë¿éµÄ×Ô¶¨ÒåÑùÊ½
-.highlight, pre {
-    margin: 5px 0;
-    padding: 5px;
-    border-radius: 3px;
-}
-.highlight, code, pre {
-    border: 1px solid #d6d6d6;
-}
+ï»¿// Custom styles.
 
 
-// Í¸Ã÷ ²©¿Í±³¾°
-//1 ²å»­-É½ background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200527203641.png);
-//2 ÔÂÇò background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603150958.jpg);
-//3 ²å»­-Ê÷-ºÓ ³ß´çÌ«´óÁË background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603150959.jpg);
-//4 ÔÂÇò-½µÁÁ¶È            background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603160426.png);
+// é€æ˜ åšå®¢èƒŒæ™¯
+//1 æ’ç”»-å±± background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200527203641.png);
+//2 æœˆçƒ background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603150958.jpg);
+//3 æ’ç”»-æ ‘-æ²³ å°ºå¯¸å¤ªå¤§äº† background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603150959.jpg);
+//4 æœˆçƒ-é™äº®åº¦            background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603160426.png);
 /*
 body {
     background:url(https://cdn.jsdelivr.net/gh/pengqi/img//pictures/20200603160426.png);
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-position:50% 50%;
-    opacity: 0.9;  //Í¸Ã÷¶È
+    opacity: 0.9;  //é€æ˜åº¦
 } 
 */
 
-//Ô²½Ç³öÏÖÎÊÌâÖ®½â¾ö·½·¨
-.sidebar {
-box-shadow: none
-background: none
+/*åšå®¢å†…å®¹é€æ˜åŒ–
+æ–‡ç« å†…å®¹çš„é€æ˜åº¦è®¾ç½®*/
+.post-block {
+ background-color: rgba(251, 251, 251, 0.9);  
 }
+
+/*ä¾§è¾¹æ¡†çš„é€æ˜åº¦è®¾ç½®*/
+.sidebar {
+  background-color: rgba(251, 251, 251, 0.9);  
+  box-shadow: none
+  background: none
+}
+
+/*ä¸‹é¢çš„ä¾§è¾¹æ¡†*/
+.sidebar-inner {
+   background-color: rgba(251, 251, 251, 0.9);  
+}
+
+/*èœå•æ çš„é€æ˜åº¦è®¾ç½®*/
+.header-inner {
+   background-color: rgba(251, 251, 251, 0.9);  
+   z-index: 10;  /*æ·»åŠ å®ƒï¼Œè°ƒæ•´å±‚çº§*/
+}
+
+/*æœç´¢æ¡†ï¼ˆlocal-searchï¼‰çš„é€æ˜åº¦è®¾ç½®*/
+.popup {
+   background-color: rgba(251, 251, 251, 0.9);   
+}
+
+/*valine è¯„è®ºæ¡†*/
+.comments {
+   background-color: rgba(251, 251, 251, 0.9);   
+}
+
+/*æ›´å¤šé˜…è¯» æŒ‰é’®*/
+.btn {
+    background-color: rgba(251, 251, 251, 0.9);  
+}
+
+/*é¡µè„š*/
+.pagination {
+   background-color: rgba(251, 251, 251, 0.9);  
+}
+
+/*ç½‘ç«™å£°æ˜*/
+.footer {
+    color: #ddd;  
+}
+
+
+
+
