--- a/themes/next/source/css/_schemes/Pisces/_sub-menu.styl
+++ b/themes/next/source/css/_schemes/Pisces/_sub-menu.styl
@@ -3,6 +3,7 @@
   border-bottom: 1px solid $table-border-color;
   margin: 0;
   padding: 6px 0;
+  background-color: rgba(251, 251, 251, 0.9);   //透明化
 
   .menu-item {
     display: inline-block;
@@ -11,6 +12,7 @@
       background: transparent;
       margin: 5px 10px;
       padding: initial;
+       background-color: rgba(251, 251, 251, 0.9);   //透明化
 
       &:hover {
         background: transparent;
